--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Cadastre-se</title>
 </head>
 <body>
-    <h1>Olá</h1>
-    <p>Começou o API</p>
+    <h1>Cadastro</h1>
 </body>
 </html>
