--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Cadastro</h1>
+    <form action="#" method="post">
+        <label for="nome">Nome:</label>
+        <input type="text" name="nome">
+        <label for="cpf">CPF:</label>
+        <input type="text" name="cpf">
+        <label for="senha">Senha:</label>
+        <input type="password" name="senha">
+        <input type="submit" value="Entrar">
+
+    </form>
 </body>
 </html>
