--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>Login</h1>
+    <form action="#" method="post">
+        <label for="nome">Nome:</label>
+        <input type="text" name="nome">
+        <label for="senha">Senha:</label>
+        <input type="password" name="senha">
+        <input type="submit" value="Entrar">
+
+    </form>
+
+    <a href="http://127.0.0.1:5000/cadastro">Cadastro</a>
+
 </body>
 </html>
