--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="#" method="post">
+    <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
+    {% with mensagens = get_flashed_messages() %}
+        {% for msg in mensagens %}
+            <p>{{msg}}</p>
+        {% endfor %}
+    {% endwith %}
+
+    <!-- Forms provisório -->
+    <form method="POST" action="#">
         <label for="nome">Nome:</label>
         <input type="text" name="nome">
         <label for="senha">Senha:</label>
