--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <h1>Bem vindo {{nome}}</h1>
     <a href="http://127.0.0.1:5000/loggout">Loggout</a>
+    <a href="http://127.0.0.1:5000/saque">Saque</a>
+    <a href="http://127.0.0.1:5000/deposito">Depósito</a>
 </body>
 </html>
