Separação dos códigos relacionados ao banco de dados do arquivo app.py, criando um arquivo bd.py

--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -10,7 +10,7 @@
         <h1>Insira o valor que deseja depositar</h1>
         <form action="#" method="post">
             <input type="number" name="deposito">
-            <input type="button" value="Depositar">
+            <input type="submit" value="Depositar">
         </form>
     </body>
 </html>
