--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -7,10 +7,10 @@
         <title>Saque</title>
     </head>
     <body>
-        <h1>Insira o valor que deseja sacar</h1>
         <form action="#" method="post">
+            <label for="saque"><h1>Insira o valor que deseja sacar</h1></label>
             <input type="number" name="saque">
-            <input type="button" value="Sacar">
+            <input type="submit" value="Sacar">
         </form>
     </body>
 </html>
