--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Bem vindo {{nome}}</h1>
+     <!-- Menssagem de saque ou depósito realizado com sucesso -->
+    {% with mensagens = get_flashed_messages() %}
+        {% for msg in mensagens %}
+            <p>{{msg}}</p>
+        {% endfor %}
+    {% endwith %}
     <a href="http://127.0.0.1:5000/loggout">Loggout</a>
     <a href="http://127.0.0.1:5000/saque">Saque</a>
     <a href="http://127.0.0.1:5000/deposito">Depósito</a>
