--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,15 +17,15 @@
 
     <!-- Forms provisório -->
     <form method="POST" action="#">
-        <label for="nome">Nome:</label>
-        <input type="text" name="nome">
+        <label for="cpf">CPF:</label>
+        <input type="text" name="cpf">
         <label for="senha">Senha:</label>
         <input type="password" name="senha">
         <input type="submit" value="Entrar">
 
     </form>
 
-    <a href="http://127.0.0.1:5000/cadastro">Cadastro</a>
+    <a href="/cadastro">Cadastro</a>
 
 </body>
 </html>
