correções na validação do login e implementação de saque e depósito com números inteiros

--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -12,7 +12,7 @@
         <label for="nome">Nome:</label>
         <input type="text" name="nome">
         <label for="cpf">CPF:</label>
-        <input type="text" name="cpf">
+        <input type="text" name="cpf" minlength="11" maxlength="11">
         <label for="senha">Senha:</label>
         <input type="password" name="senha">
         <input type="submit" value="Entrar">
