--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -18,7 +18,7 @@
     <!-- Forms provisório -->
     <form method="POST" action="#">
         <label for="cpf">CPF:</label>
-        <input type="text" name="cpf">
+        <input type="text" name="cpf" minlength="11" maxlength="11">
         <label for="senha">Senha:</label>
         <input type="password" name="senha">
         <input type="submit" value="Entrar">
