--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Insira o valor que deseja depositar</h1>
         <form action="#" method="post">
-            <input type="number" name="deposito">
+            <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
             <input type="submit" value="Depositar">
         </form>
     </body>
