--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -9,7 +9,7 @@
     <body>
         <form action="#" method="post">
             <label for="saque"><h1>Insira o valor que deseja sacar</h1></label>
-            <input type="number" name="saque">
+            <input type="text" name="saque" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
             <input type="submit" value="Sacar">
         </form>
     </body>
