Criação do arquivo modelo.py e implementação da função validaOperação (função que valida se o input dado pelo usuario é valido ou não) nesse mesmo arquivo. Alteração de nomes de variáveis para que se adequem ao modelo de bd de duas tabelas (conta e usuario). Alteração de decimal para float a coluna saldo_conta da tabela conta e outras pequenas alterações no banco de dados.

--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -57,7 +57,7 @@
             <option value="Prefiro não informar">Prefiro não informar</option>
         </select><br>
         <label for="senha">Senha</label><br>
-        <input type="password" name="senha" placeholder="Até 6 dígitos"><br>
+        <input type="password" name="senha" placeholder="Até 6 dígitos" maxlength="6"><br>
         <input type="submit" value="Entrar">
     </form>
 </body>
