--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -20,7 +20,7 @@
         <label for="cpf">CPF:</label>
         <input type="text" name="cpf" minlength="11" maxlength="11">
         <label for="senha">Senha:</label>
-        <input type="password" name="senha">
+        <input type="password" name="senha" maxlength="6">
         <input type="submit" value="Entrar">
 
     </form>
