--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -7,12 +7,14 @@
     <title>Home</title>
 </head>
 <body>
-    {% if session['nome'] %}
-    <h1>Bem vindo, {{ session['nome'] }}</h1>
+    {% if nome %}
+    <h1>Bem vindo, {{ nome }}</h1>
     {% else %}]
     <p>Não está logado ainda</p>
     {% endif %}
-    
+    <hr>
+    <h3>Seu saldo é de:</h3>
+    <h1>R$ {{saldo}}</h1>
      <!-- Menssagem de saque ou depósito realizado com sucesso -->
     {% with mensagens = get_flashed_messages() %}
         {% for msg in mensagens %}
