Implementação de um gerador de número de conta ao cadastrar a conta. Mudança do login, uso do CPF para logar substituido por numero da conta.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -12,6 +12,7 @@
     {% else %}]
     <p>Não está logado ainda</p>
     {% endif %}
+    <h2>Conta: {{numero_conta}}</h2>
     <hr>
     <h3>Seu saldo é de:</h3>
     <h1>R$ {{saldo}}</h1>
