--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,8 +17,8 @@
 
     <!-- Forms provisório -->
     <form method="POST" action="#">
-        <label for="cpf">CPF:</label>
-        <input type="text" name="cpf" minlength="11" maxlength="11">
+        <label for="numero_conta">Número da conta:</label>
+        <input type="text" name="numero_conta" minlength="6" maxlength="6">
         <label for="senha">Senha:</label>
         <input type="password" name="senha" maxlength="6">
         <input type="submit" value="Entrar">
