--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -5,9 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Depósito</title>
+        <link rel="stylesheet" href="statics/styles.css">
     </head>
     <body>
-        <h1>Insira o valor que deseja depositar</h1>
+    <!-- começo da logo e do menu --><img src="statics/logo.png" class="a"> 
+        <a id="link_b" a href="login.html">Sair</a><span id="link_a">┃</span>
+        <a id="link_a" a href="contato.html">Contato</a><span id="link_a">┃</span>
+        <a id="link_a" a href="home.html">Home</a> <!-- fim da logo e do menu -->
+        <!-- parte do deposito -->
+        <div id="retangulo" class="retangulo"></div>       
+        <h1>Insira o valor que deseja depositar:</h1>
         <form action="#" method="post">
             <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
             <input type="submit" value="Depositar">
