--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -15,13 +15,15 @@
         <a href="login.html">Sair</a> <!-- fim da logo e do menu -->
     </div>
         <!-- parte do deposito -->
-        <div id="retangulo" class="retangulo">       
-        <h1>Insira o valor que deseja depositar:</h1>
-        <form action="#" method="post">
-            <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
-            <input type="submit" value="Depositar"><br>
-            <button><a href="home.html"> Voltar</a></button><!--Aqui tem que ser /home, mas como não tenho a conexão com o flask, coloquei um link local-->
-        </div><!--fiz a união de todo o conteúdo, para colocar tudo dentro do quadrado-->
-        </form>
+        <div id="retangulo" class="retangulo"></div> 
+        <div id="texto" class="texto">
+            <h1>Insira o valor que deseja depositar:</h1>
+            <form action="#" method="post">
+                <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
+                <input type="submit" value="Depositar"><br><br>
+                <button><a href="home.html"> Voltar</a></button>
+                <!--Aqui tem que ser /home, mas como não tenho a conexão com o flask, coloquei um link local-->
+                <!-- Vlw pra quem fez o botão de voltar, eu tinha esquecido dele -->
+        </div>
     </body>
 </html>
