--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -4,61 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/styles/styles.css">
     <title>Cadastre-se</title>
 </head>
 <body>
-    <h1>Cadastro</h1>
-    <form action="#" method="post">
-        <label for="nome">Nome:</label><br>
-        <input type="text" name="nome"><br>
-        <label for="cpf">CPF:</label><br>
-        <input type="text" name="cpf" minlength="11" maxlength="11" placeholder="Digite sem os pontos e traços"><br>
-        <label for="endereço">Endereço:</label><br>
-        <input type="text" name="rua" placeholder="Rua ou Avenida">
-        <input type="text" name="numero" placeholder="Número"><br>
-        <input type="text" name="bairro" placeholder="Bairro"><br>
-        <input type="text" name="cidade" placeholder="Cidade">
-        <select name="estado" id="estado">
-            <option value="Acre">Acre</option>
-            <option value="Alagoas">Alagoas</option>
-            <option value="Amapá">Amapá</option>
-            <option value="Amazonas">Amazonas</option>
-            <option value="Bahia">Bahia</option>
-            <option value="Ceará">Ceará</option>
-            <option value="Distrito Federal">Distrito Federal</option>
-            <option value="Espirito Santo">Espirito Santo</option>
-            <option value="Goiás">Goiás</option>
-            <option value="Maranhão">Maranhão</option>
-            <option value="Mato Grosso">Mato Grosso</option>
-            <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-            <option value="Minas Gerais">Minas Gerais</option>
-            <option value="Pará">Pará</option>
-            <option value="Paraíba">Paraíba</option>
-            <option value="Paraná">Paraná</option>
-            <option value="Pernambuco">Pernambuco</option>
-            <option value="Piauí">Piauí</option>
-            <option value="Rio de Janeiro">Rio de Janeiro</option>
-            <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-            <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-            <option value="Rondônia">Rondônia</option>
-            <option value="Roraima">Roraima</option>
-            <option value="Santa Catarina">Santa Catarina</option>
-            <option value="São Paulo">São Paulo</option>
-            <option value="Sergipe">Sergipe</option>
-            <option value="Tocantins">Tocantins</option>
-        </select><br>
-        <label for="datNascimento">Data de Nascimento</label><br>
-        <input type="date" name="dataNascimento" placeholder="Data de Nascimento"><br>
-        <label for="genero">Gênero</label><br>
-        <select name="genero" id="generos">
-            <option value="Masculino">Masculino</option>
-            <option value="Feminino">Feminino</option>
-            <option value="Outro">Outro</option>
-            <option value="Prefiro não informar">Prefiro não informar</option>
-        </select><br>
-        <label for="senha">Senha</label><br>
-        <input type="password" name="senha" placeholder="Até 6 dígitos" maxlength="6"><br>
-        <input type="submit" value="Entrar">
-    </form>
+    <header class="navbar">
+        <a href="/">
+            <img src="../static/public/logo.png" alt="logo">
+        </a>
+        <div class="links">
+            <a href="/login">Entrar</a>
+        </div>
+    </header>
+    <div>
+        <form action="#" method="post" class="cadastro-form">
+            <h1>Cadastro</h1>
+            <label for="nome">Nome:</label><br>
+            <input type="text" name="nome" required><br>
+            <label for="cpf">CPF:</label><br>
+            <input type="text" name="cpf" minlength="11" maxlength="11" placeholder="Digite sem os pontos e traços" required><br>
+            <label for="endereço">Endereço:</label><br>
+            <input type="text" name="rua" placeholder="Rua ou Avenida" required>
+            <input type="text" name="numero" placeholder="Número" required><br>
+            <input type="text" name="bairro" placeholder="Bairro" required><br>
+            <input type="text" name="cidade" placeholder="Cidade" required>
+            <select name="estado" id="estado" required>
+                <option value="Acre">Acre</option>
+                <option value="Alagoas">Alagoas</option>
+                <option value="Amapá">Amapá</option>
+                <option value="Amazonas">Amazonas</option>
+                <option value="Bahia">Bahia</option>
+                <option value="Ceará">Ceará</option>
+                <option value="Distrito Federal">Distrito Federal</option>
+                <option value="Espirito Santo">Espirito Santo</option>
+                <option value="Goiás">Goiás</option>
+                <option value="Maranhão">Maranhão</option>
+                <option value="Mato Grosso">Mato Grosso</option>
+                <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                <option value="Minas Gerais">Minas Gerais</option>
+                <option value="Pará">Pará</option>
+                <option value="Paraíba">Paraíba</option>
+                <option value="Paraná">Paraná</option>
+                <option value="Pernambuco">Pernambuco</option>
+                <option value="Piauí">Piauí</option>
+                <option value="Rio de Janeiro">Rio de Janeiro</option>
+                <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                <option value="Rondônia">Rondônia</option>
+                <option value="Roraima">Roraima</option>
+                <option value="Santa Catarina">Santa Catarina</option>
+                <option value="São Paulo">São Paulo</option>
+                <option value="Sergipe">Sergipe</option>
+                <option value="Tocantins">Tocantins</option>
+            </select><br>
+            <label for="datNascimento">Data de Nascimento</label><br>
+            <input type="date" name="dataNascimento" placeholder="Data de Nascimento" required><br>
+            <label for="genero">Gênero</label><br>
+            <select name="genero" id="generos" required>
+                <option value="Masculino">Masculino</option>
+                <option value="Feminino">Feminino</option>
+                <option value="Outro">Outro</option>
+                <option value="Prefiro não informar">Prefiro não informar</option>
+            </select><br>
+            <label for="senha">Senha</label><br>
+            <input type="password" name="senha" placeholder="Até 6 dígitos" maxlength="6" required><br>
+            <input type="submit" value="Cadastrar" id="cadastrar">
+        </form>
+    </div>
 </body>
 </html>
