--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -5,23 +5,28 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Depósito</title>
-        <link rel="stylesheet" href="statics/styles.css">
+        <link rel="stylesheet" href="../static/styles/styles.css">
     </head>
     <body>
-    <img src="statics/logo.png" class="a"> 
-    <div class="link"> <!-- Coloquei uma div para separar no canto superior-->
-        <a href="home.html">Home</a> ┃   <!--retirei o split-->
-        <a href="contato.html">Contato</a>┃
-        <a href="login.html">Sair</a> <!-- fim da logo e do menu -->
-    </div>
-        <!-- parte do deposito -->
-        <div id="retangulo" class="retangulo">       
-        <h1>Insira o valor que deseja depositar:</h1>
-        <form action="#" method="post">
-            <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais">
-            <input type="submit" value="Depositar"><br>
-            <button><a href="home.html"> Voltar</a></button><!--Aqui tem que ser /home, mas como não tenho a conexão com o flask, coloquei um link local-->
-        </div><!--fiz a união de todo o conteúdo, para colocar tudo dentro do quadrado-->
-        </form>
+        <header class="navbar">
+            <a href="/">
+                <img src="../static/public/logo.png" alt="logo">
+            </a>
+            <div class="links">
+                <a href="/home">Home </a> <span>|</span>
+                <a href="/loggout">Sair</a>
+            </div>
+        </header>
+            <div class="corposaque">
+                <h1>Insira o valor que deseja depositar:</h1>
+                <form action="" method="POST">
+                <span id="cifrão">
+                    <label for="deposito">R$</label>
+                    <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" >
+                </span>
+                    <input type="submit" value="Depositar" id="depositar">
+                </form>
+                <button><a href="/home">Voltar</a></button>
+            </div>
     </body>
 </html>
