--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -19,7 +19,7 @@
     <!-- Menssagem de erro de login (só aparece se as informações estiverem erradas) -->
     {% with mensagens = get_flashed_messages() %}
         {% for msg in mensagens %}
-            <p id="erro">{{msg}}</p>
+            <br><p id="erro">{{msg}}</p><br>
         {% endfor %}
     {% endwith %}
 
@@ -29,7 +29,7 @@
             <label for="numero_conta">Número da conta:</label>
             <input type="text" name="numero_conta" minlength="6" maxlength="6">
             <label for="senha">Senha:</label>
-            <input type="password" name="senha" maxlength="6">
+            <input type="password" name="senha" maxlength="16">
             <button type="submit" value="Entrar">Entrar</button>
         </form>  
     </div>
