Implementação de mensagem de erro ao inserir números com mais de 6 caracteres antes do '.' em operações de saque e depósito. Para isso houve alteração no parametro float do saldo_conta do banco de dados e na função validaOperação do modelo.py

--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -17,6 +17,11 @@
                 <a href="/loggout">Sair</a>
             </div>
         </header>
+            {% with mensagens = get_flashed_messages() %}
+                {% for msg in mensagens %}
+                    <p id="erro">{{msg}}</p>
+                {% endfor %}
+            {% endwith %}
             <div class="corposaque">
                 <h1>Insira o valor que deseja depositar:</h1>
                 <form action="" method="POST">
