--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -15,8 +15,14 @@
             <div class="links">
                 <a href="/home">Home </a> <span>|</span>
                 <a href="/loggout">Sair</a>
+                
             </div>
         </header>
+            {% with mensagens = get_flashed_messages() %}
+                {% for msg in mensagens %}
+                    <p id="erro">{{msg}}</p>
+                {% endfor %}
+            {% endwith %}
             <div class="corposaque">
                 <h1>Insira o valor que deseja sacar:</h1>
                 <form action="" method="POST">
