Correção no posicionamento da mensagem de erro de saque/depósito
retirada do complemento automático nos formulário de saque e depósito.

--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -289,3 +289,16 @@ body {
   right: 36%;
 }
 
+#erro-saque-deposito {
+  position: absolute;
+  left: 33.5%;
+  bottom: 20%;
+  width: 33vw;
+
+  font-size: 1.3vw;
+  font-weight: 400;
+  text-align: justify;
+  color: white;
+  font-weight: 700;
+}
+
