--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -19,7 +19,7 @@
         </header>
             {% with mensagens = get_flashed_messages() %}
                 {% for msg in mensagens %}
-                    <p id="erro">{{msg}}</p>
+                    <p id="erro-saque-deposito">{{msg}}</p>
                 {% endfor %}
             {% endwith %}
             <div class="corposaque">
@@ -27,7 +27,7 @@
                 <form action="" method="POST">
                 <span id="cifrão">
                     <label for="deposito">R$</label>
-                    <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" >
+                    <input type="text" name="deposito" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                 </span>
                     <input type="submit" value="Depositar" id="depositar">
                 </form>
