--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -20,7 +20,7 @@
         </header>
             {% with mensagens = get_flashed_messages() %}
                 {% for msg in mensagens %}
-                    <p id="erro">{{msg}}</p>
+                    <p id="erro-saque-deposito">{{msg}}</p>
                 {% endfor %}
             {% endwith %}
             <div class="corposaque">
@@ -28,7 +28,7 @@
                 <form action="" method="POST">
                 <span id="cifrão">
                     <label for="saque">R$</label>
-                    <input type="text" name="saque" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" >
+                    <input type="text" name="saque" placeholder="00.00" pattern="[0-9]{1, 10}.[0-9]{2}" title="Separe os centavos dos reais com '.' e utilize apenas 2 casas decimais" autocomplete="off">
                 </span>
                     <input type="submit" value="Sacar" id="sacar">
                 </form>
