--- a/src/templates/deposito.html
+++ b/src/templates/deposito.html
@@ -23,6 +23,7 @@
                 {% endfor %}
             {% endwith %}
             <div class="corposaque">
+                <h2>Saldo atual: {{saldo}}</h2>
                 <h1>Insira o valor que deseja depositar:</h1>
                 <form action="" method="POST">
                 <span id="cifrão">
