--- a/src/templates/saque.html
+++ b/src/templates/saque.html
@@ -24,6 +24,7 @@
                 {% endfor %}
             {% endwith %}
             <div class="corposaque">
+                <h2>Saldo atual: {{saldo}}</h2>
                 <h1>Insira o valor que deseja sacar:</h1>
                 <form action="" method="POST">
                 <span id="cifrão">
