--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -1,4 +1,50 @@
 /*CONFIGURAÇÕES COMPARTILHADAS*/
+/* começo menu */
+.menu{  position: absolute;
+  top:8vh;
+  left: 15vw;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #2660A4;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #FFFFFF;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+/* fim menu */
+
 body {
     background-color: rgba(255, 93, 0);
     font-family: Arial, Helvetica, sans-serif;
@@ -11,18 +57,10 @@ body {
     height: 16vh;
 }
 
-.links {
-    position: absolute;
-    top:8vh;
-    right: 15vw;
-}
-
-.links a, span {
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-size: 1.5vw;
-    font-weight: bold;
-    text-decoration: none;
+.user{
+  position: absolute;
+  top:8vh;
+  right: 15vw;
 }
 
 /* PÁGINAS SAQUE E DEPÓSITO */
