--- a/src/templates/cadastro.html
+++ b/src/templates/cadastro.html
@@ -35,8 +35,8 @@
                 <h1>Cadastro</h1>
                 <label for="nome">Nome:</label><br>
                 <input type="text" name="nome" required><br>
-                <label for="cpf">CPF:</label><br>
-                <input oninput="cpf(this)" type="text" placeholder="Digite sem os pontos e traços" required><br>
+                <label for="CPF">CPF:</label><br>
+                <input oninput="cpf(this)" type="text" name='CPF' placeholder="Digite sem os pontos e traços" required><br>
                 <div type="separações" class="separações">Rua ou Avenida:</div>
                 <input type="text" name="rua" placeholder="Rua ou Avenida" required>
                 <div type="separações" class="separações">Número:</div>
