template inicial da página home para gerentes de agência,
rota de requisições (geral ainda), repetições de requisições (sem formatação), alteração na condição que confere se o usuário já está logado por conta de conflito na função de logout

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -51,7 +51,12 @@
             <button><a href="/deposito">Depósito</a></button>
         </div>
     </div>
-     <!-- Menssagem de saque ou depósito realizado com sucesso -->
+
+    <div>
+    {% block gerente %}
+    {% endblock %}
+    </div>
+     <!-- Mensagem de saque ou depósito realizado com sucesso -->
     {% with mensagens = get_flashed_messages() %}
         {% for msg in mensagens %}
             <p id="info">{{msg}}</p>
