--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -213,6 +213,17 @@ body {
   top: 24%;
 }
 
+#confimacaoSenha{
+  position: absolute;
+  font-size: 1.5vw;
+  color: white;
+  text-align: center;
+  top:10%;
+  left: 37.3%;
+  right: 37.3%;
+
+}
+
 /*PÁGINA CADASTRO*/
 .cadastro-form{
   width:430px;
