formatação das requisições

--- a/src/templates/homegerente.html
+++ b/src/templates/homegerente.html
@@ -1,4 +1,4 @@
 {% extends "home.html" %}
 {% block gerente %}
-    <a href="/requisicoes">Requisicoes pendentes</a>
+    <a href="/requisicoes/confirmacao_deposito">Requisicoes de depósito</a>
 {% endblock %}
