Criação das rotas que mandam informações referentes as requisições ao banco de dados (mudança de dados cadastrais, fechamento de conta e alterações na rota /cadastro para se adequr a essa funcionalidade

--- a/src/static/styles/styles.css
+++ b/src/static/styles/styles.css
@@ -214,15 +214,12 @@ body {
 }
 
 #confimacaoSenha{
-  position: absolute;
-  font-size: 1.5vw;
-  color: white;
+  font-size: 1.2vw;
+  color: rgb(255, 0, 0);
   text-align: center;
-  top:10%;
-  left: 37.3%;
-  right: 37.3%;
 
 }
+
 
 /*PÁGINA CADASTRO*/
 .cadastro-form{
