--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -11,17 +11,17 @@
                 </div>
                 <div class="useralt"><br>
                     <label for="nome">Nome:</label><br>
-                        <input type="text" name="nome" required><br>
+                        <input type="text" name="nome"><br>
                         <div type="separações" class="separações">Rua ou Avenida:</div>
-                        <input type="text" name="rua" placeholder="Rua ou Avenida" required>
+                        <input type="text" name="rua" placeholder="Rua ou Avenida">
                         <div type="separações" class="separações">Número:</div>
-                        <input type="text" name="numero" placeholder="Número" required><br>
+                        <input type="text" name="numero" placeholder="Número"><br>
                         <div type="separações" class="separações">Bairro:</div>
-                        <input type="text" name="bairro" placeholder="Bairro" required><br>
+                        <input type="text" name="bairro" placeholder="Bairro"><br>
                         <div type="separações" class="separações">Cidade:</div>
-                        <input type="text" name="cidade" placeholder="Cidade" required>
+                        <input type="text" name="cidade" placeholder="Cidade">
                         <div type="separações" class="separações">Estado:</div>
-                        <select name="estado" id="estado" required>
+                        <select name="estado" id="estado">
                             <option value="Acre">Acre</option>
                             <option value="Alagoas">Alagoas</option>
                             <option value="Amapá">Amapá</option>
@@ -51,17 +51,18 @@
                             <option value="Tocantins">Tocantins</option>
                         </select><br>
                         <label for="datNascimento">Data de Nascimento:</label><br>
-                        <input type="date" name="dataNascimento" placeholder="Data de Nascimento" required><br>
+                        <input type="date" name="dataNascimento" placeholder="Data de Nascimento"><br>
                         <label for="genero">Gênero:</label><br>
-                        <select name="genero" id="generos" required>
+                        <select name="genero" id="generos">
                             <option value="Masculino">Masculino</option>
                             <option value="Feminino">Feminino</option>
                             <option value="Outro">Outro</option>
                             <option value="Prefiro não informar">Prefiro não informar</option>
                         </select><br><br>
-                        <input type="submit" value="Alterar Dados" id="cadastrar">
+                        <input type="submit" value="Alterar Dados" id="alterar">
                 </div>
             </div>
         </div>
+        <input type="submit" value="DELETAR CONTA" id="deletar">
     </body>
 </html>
