--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -3,26 +3,27 @@
     <link rel="stylesheet" href="../static/styles/requisicoes.css">
     <title>Requisições</title>
 </head>
-
-{% for requisição in requisicoesDeposito %}
-    <form action="">
-    {% for chave, valor in requisição.items() %}
-        {% if chave == 'id_confirmacao_deposito' %}
-            <label for="id_confirmacao_deposito">Id da operação:</label>
-            <input type="text" name="id_confirmacao_deposito" value="{{valor}}" readonly><br>
-        {% elif chave == 'valor_confirmacao_deposito'  %}
-            <label for="valor_confirmacao_deposito">Valor:</label>
-            <input type="text" name="valor_confirmacao_deposito" value="{{valor}}" readonly><br>
-        {% elif chave == 'numero_conta' %}
-            <label for="numero_conta">Número da conta:</label>
-            <input type="text" name="numero_conta" value="{{valor}}" readonly>
-        {% elif chave == 'numero_agencia' %}
-            <label for="numero_agencia">Agência:</label>
-            <input type="text" name="numero_agencia" value="{{valor}}" readonly><br>
-        {% elif chave == 'data_hora' %}
-            <label for="data_hora">Data e Hora:</label>
-            <input type="text" name="data_hora" value="{{valor}}" readonly>
-        {% endif %}
-    {% endfor %}
+{% if tipo == 'confirmacao_deposito' %}
+    {% for requisição in requisicoesDeposito %}
+        <form action="">
+        {% for chave, valor in requisição.items() %}
+            {% if chave == 'id_confirmacao_deposito' %}
+                <label for="id_confirmacao_deposito">Id da operação:</label>
+                <input type="text" name="id_confirmacao_deposito" value="{{valor}}" readonly><br>
+            {% elif chave == 'valor_confirmacao_deposito'  %}
+                <label for="valor_confirmacao_deposito">Valor:</label>
+                <input type="text" name="valor_confirmacao_deposito" value="{{valor}}" readonly><br>
+            {% elif chave == 'numero_conta' %}
+                <label for="numero_conta">Número da conta:</label>
+                <input type="text" name="numero_conta" value="{{valor}}" readonly>
+            {% elif chave == 'numero_agencia' %}
+                <label for="numero_agencia">Agência:</label>
+                <input type="text" name="numero_agencia" value="{{valor}}" readonly><br>
+            {% elif chave == 'data_hora' %}
+                <label for="data_hora">Data e Hora:</label>
+                <input type="text" name="data_hora" value="{{valor}}" readonly>
+            {% endif %}
+        {% endfor %}
     </form>
-{% endfor %}
+    {% endfor %}
+{% endif %}
