--- a/src/templates/user.html
+++ b/src/templates/user.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <link rel="stylesheet" href="../static/styles/styles.css">
-    </head>
-    <body>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/styles/styles.css">
+    <title>Home</title>
+    <script>
+        // pra abrir o menu
+        function abre() {
+        document.getElementById("mySidenav").style.width = "250px";
+        }
+        // pra fechar o menu
+        function fecha() {
+        document.getElementById("mySidenav").style.width = "0";
+        }
+    </script>
+</head>
+<body>
+    <header class="navbar">
+        <div class="menu">
+            <span style="font-size:40px;cursor:pointer" onclick="abre()">&#9776;</span>
+        </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="fecha()">&times;</a>
+            <a href="/home">Home</a>
+            <a href="/saque">Saque</a>
+            <a href="/deposito">Deposito</a>
+            <a href="/loggout">Sair</a>
+        </div>
+        <a href="/">
+            <img src="../static/public/logo.png" alt="logo">
+        </a>
+        <div class="user">
+            <a href="/user">
+            <img src="../static/public/user.png" alt="user" style="width:50px;height:50px;"></a>
+        </div>
+    </header>
+    <hr>
         <div class="divtabuser">
             <div class="dirowuser">
                 <div class="userinfo">
 
                 </div>
+                <div class="espaço"></div>
                 <div class="useralt"><br>
                     <label for="nome">Nome:</label><br>
                         <input type="text" name="nome"><br>
@@ -63,6 +97,6 @@
                 </div>
             </div>
         </div>
-        <input type="submit" value="DELETAR CONTA" id="deletar">
+        <input type="submit" value="EXCLUIR CONTA" id="deletar">
     </body>
 </html>
