Formatação inicial das requisições de abertura de conta

--- a/src/templates/requisicoes.html
+++ b/src/templates/requisicoes.html
@@ -50,26 +50,26 @@
                 <label for="genero_cadastro">Gênero:</label>
                 <input type="text" value="{{valor}}" readonly>
             {% if chave == 'rua_avenida_cadastro' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="rua_avenida_cadastro"></label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'numero_casa_cadastro' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="numero_casa_cadastro">Número:</label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'bairro_cadastro' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="bairro_cadastro">Bairro:</label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'cidade_cadastro' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="cidade_cadastro">Cidade:</label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'estado_cadastro' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="estado_cadastro">Estado:</label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'numero_agencia' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="numero_agencia">Agência:</label>
+                <input type="text" value="{{valor}}" readonly>
             {% if chave == 'numero_conta' %}
-                <label for=""></label>
-                <input type="text">
+                <label for="numero_conta">Conta:</label>
+                <input type="text" value="{{valor}}" readonly>
         {% endfor %}    
         </form>
     {% endfor %}
